[package]
name = "mini-lsm-starter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
arc-swap = "1"
bytes = "1"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
ouroboros = "0.15"
moka = "0.9"
bytesize = "1.2.0"

[dev-dependencies]
tempfile = "3"
